# pocket

./: .gitignore  astro.config.mjs  auth.config.mjs  components.json  drizzle.config.ts  eslint.config.js  eslint.config.mjs  migrate.js  package-lock.json  package.json  panda.config.cjs  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.mjs  tsconfig.json
cloud/: .terraform.lock.hcl  main.tf
cloud/rust/: Cargo.toml
cloud/rust/.cargo/: config.toml
cloud/rust/commands/: Cargo.toml
cloud/rust/fixed_payments/: Cargo.toml
cloud/rust/reset_budget/: Cargo.toml
cloud/rust/reset_budget/src/: main.rs
cloud/src/: go.mod  go.sum
cloud/src/ent/: budget.go  budget_create.go  budget_delete.go  budget_query.go  budget_update.go  client.go  ent.go  tx.go  (+7 more)
drizzle/: 0000_complete_triathlon.sql  0000_jittery_toad_men.sql  0000_kind_molecule_man.sql  0001_neat_warlock.sql  0002_typical_microchip.sql  0003_swift_kinsey_walden.sql  0004_high_doctor_spectrum.sql  0005_breezy_nico_minoru.sql  0008_wooden_phalanx.sql  0009_windy_diamondback.sql  0010_breezy_iron_fist.sql  0011_minor_tana_nile.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  _journal.json
src/: index.css  pwa.ts
src/components/: budget-labels.astro  expense-labels.astro  labels.astro
src/pages/: _add-transaction-form.astro  _budget-form.astro  _expense-form.astro  _form-open-button.astro  _layout.astro  _table.astro  _transaction-handler.ts  index.astro
(+36 files in other folders)
